# Judged

./: .gitignore  Dockerfile  compile.cc
execve_seccomp/: CMakeLists.txt
execve_seccomp/output/: sexec
execve_seccomp/src/: main.c  runner.h
execve_seccomp/src/rules/: c_cpp.c  c_cpp_file_io.c  general.c  seccomp_rules.h
execve_seccomp/test/: test
output/: sexec
runner/: CMakeLists.txt
runner/output/: runner
runner/src/: main.c
